留言板块的完成

--- a/page/css/base.css
+++ b/page/css/base.css
@@ -221,6 +221,34 @@ i{
     color: #a2a2a2;
 }
 
+.page-tool{
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.page-tool > ul > li{
+    display: inline-block;
+    width: 40px;
+    height: 30px;
+    background-color: #fff;
+    line-height: 30px;
+    margin:0 3px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.page-tool > ul > li:hover{
+    background-color: #337ab7;
+    color: #fff;
+}
+
+.now_page{
+    background-color: teal !important;
+    color: #fff;
+}
+
+
+
 @media screen and (max-width:768px){
     .hanbor{
         display: block;
@@ -266,12 +294,12 @@ i{
 
 @font-face {
     font-family: 'iconfont';  /* project id 1829735 */
-    src: url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.eot');
-    src: url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.woff') format('woff'),
-    url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_1829735_6ikcm0txzhs.svg#iconfont') format('svg');
+    src: url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.eot');
+    src: url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.woff2') format('woff2'),
+    url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.woff') format('woff'),
+    url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_1829735_iauwp85lkbf.svg#iconfont') format('svg');
 }
 
 .iconfont{
