除了搜索功能，基本全部完成

--- a/page/css/base.css
+++ b/page/css/base.css
@@ -144,6 +144,7 @@ i{
 .right-module > ul > li{
     color: #fff;
     padding: 8px 8px;
+    cursor: pointer;
     border-bottom: 1px solid #292929;
 }
 
